# hass-petrolprices

./: .gitattributes  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/petrolprices/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/petrolprices/translations/: en.json
